# heresphere-server

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  bookmarks.py  build_executable.py  bus.py  cache.py  create_docker_image.bat  database.py  files.py  globals.py  gunicorn.conf.py  heresphere.py  jsconfig.json  logger_config.py  main.py  main.spec  manifest.json  migrate.py  pyproject.toml  rename_multi.py  requirements.txt  run_docker_image.bat  save_docker_image.bat  service-worker.js  similar.py  thumbnail.py  utils.py  video_database.py  videos.py
.github/workflows/: build-executable.yml  test-win-executable.yml
linux/: hereshpere.service  heresphere.service  start.sh  update_libs.sh
src/: api.py  bookmarks.py  bus.py  files.py  globals.py  heresphere.py  migrate.py  onlines.py  similar.py  thumbnail.py  utils.py  videos.py
src/database/: database.py  download_table_functions.py  migrate_database.py  online_table_functions.py  similarity_table_functions.py  video_database.py  video_models.py  video_table_functions.py
src/migrate/: migrate.py  migrate_downloads.py  migrate_drop_video_table.py  migrate_online.py  migrate_similarity.py  migrate_utils.py
static/: bookmarks.js  common.js  global.js  index.js  library.js  share.html  styles.css
static/css/: styles.css
static/js/: event-bus.js  helper.js  index.js  state.js
templates/: base.html  bookmarks.html  index.html  library.html
templates/components/: confirm_modal.html  file_progress.html  filter.html  list_files.html  loading.html  move_library_modal.html  page_functions.html  (+8 more)
(+19 files in other folders)
